syntax = "proto3";
package serverpb;

import "github.com/coreos/coreos-baremetal/bootcfg/storage/storagepb/storage.proto";

service Groups {
  // Get a machine Group by id.
  rpc GroupGet(GroupGetRequest) returns (GroupGetResponse) {};
  // List all machine Groups.
  rpc GroupList(GroupListRequest) returns (GroupListResponse) {};
}

service Profiles {
  // Create a Profile.
  rpc ProfilePut(ProfilePutRequest) returns (ProfilePutResponse) {};
  // Get a Profile by id.
  rpc ProfileGet(ProfileGetRequest) returns (ProfileGetResponse) {};
  // List all Profiles.
  rpc ProfileList(ProfileListRequest) returns (ProfileListResponse) {};
}

service Select {
  // SelectGroup returns the Group matching the given labels.
  rpc SelectGroup(SelectGroupRequest) returns (SelectGroupResponse) {};
  // SelectProfile returns the Profile matching the given labels.
  rpc SelectProfile(SelectProfileRequest) returns (SelectProfileResponse) {};
}

message SelectGroupRequest {
  map<string, string> labels = 1;
}

message SelectGroupResponse {
  storagepb.Group group = 1;
}

message SelectProfileRequest {
  map<string, string> labels = 1;
}

message SelectProfileResponse {
  storagepb.Profile profile = 1;
}

message GroupGetRequest {
  string id = 1;
}

message GroupListRequest {}

message GroupGetResponse {
  storagepb.Group group = 1;
}

message GroupListResponse {
  repeated storagepb.Group groups = 1;
}

message ProfilePutRequest {
  storagepb.Profile profile = 1;
}

message ProfilePutResponse {}

message ProfileGetRequest {
  string id = 1;
}

message ProfileGetResponse {
  storagepb.Profile profile = 1;
}

message ProfileListRequest {}

message ProfileListResponse {
  repeated storagepb.Profile profiles = 1;
}
